# click-track

./: .editorconfig  .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  properties.gradle  properties.gradle.kts  settings.gradle  settings.gradle.kts
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: android-release-build.yml  build-check.yml  coverage.yml  deploy.yml  report-coverage.yml
android-app/: .gitignore  build.gradle.kts  generate_icons.gradle.kts  google-services.json  lint.xml  proguard-rules.pro
android-app/src/main/: AndroidManifest.xml
android-app/src/main/cpp/: AudioTrack.cpp  AudioTrack.h  Bindings.cpp  CMakeLists.txt  Logger.cpp  Logger.h  NativeCrash.cpp  OboeInit.cpp  PrimitiveAudio.cpp  PrimitiveAudio.h  PrimitiveAudioPlayer.cpp  PrimitiveAudioPlayer.h  PrimitiveAudioPlayerBinding.cpp  ResamplerBindings.cpp
app/: .gitignore  build.gradle  build.gradle.kts  generate_icons.gradle.kts  proguard-rules.pro
app/src/debug/: google-services.json
app/src/main/: AndroidManifest.xml  google-services.json
app/src/main/cpp/: AudioTrack.cpp  AudioTrack.h  AudioTrackBindings.cpp  CMakeLists.txt  Log.h  NativeCrash.cpp
app/src/perftest/: AndroidManifest.xml  google-services.json
build-src/: build.gradle.kts  settings.gradle.kts
buildSrc/: build.gradle.kts
compose-ui/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios-app/: .gitignore  Podfile
ios-app/ClickTrack/: ClickTrackApp.swift  ComposeViewController.swift  ContentView.swift  GoogleService-Info.plist  Info.plist  LiveActivityBridge.swift  LiveActivityNotification.swift
ios-app/ClickTrack.xcodeproj/: project.pbxproj
ios-app/ClickTrack.xcworkspace/: contents.xcworkspacedata
ios-app/ClickTrack/AppIcon.icon/: icon.json
ios-app/ClickTrackLiveActivity/: ClickTrackActivityAttributes.swift  ClickTrackLiveActivityBundle.swift  ClickTrackLiveActivityView.swift  Info.plist
ios-kotlin-pod/: ClickTrackMultiplatform.podspec  build.gradle.kts
lib/: build.gradle  build.gradle.kts
lib/src/androidMain/: AndroidManifest.xml
multiplatform/: .gitignore  ClickTrackMultiplatform.podspec  build.gradle.kts
multiplatform/composeResources/values-ru/: strings.xml
tools/svg2compose/: svg2compose.main.kts
(+1279 files in other folders)
